bad/assign_self_null.example_compiler_output
ERROR
[1mbad/assign_self_null.lat:5:7: [1;31merror: [0;1mleft side is not assignable[m
	self = null;
	     [1;32m^[m
[1mbad/assign_self_null.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	self = null;
	[1;32m^[m
